move lsp context menu actions to xmlgui

avoids crashes

BUG: 477224